--- a/projeto_cordel/index.html
+++ b/projeto_cordel/index.html
@@ -28,7 +28,7 @@
 
 
 
-<section class="imagem">
+<section class="imagem" id="img01">
     <p>
         Não é mais como era antes  <br>
         É tudo abreviado <br>
@@ -65,7 +65,7 @@
 </section>
 
 
-<section class="imagem">
+<section class="imagem" id="img02">
     
     <p>
         Tenho saudade das cartas  <br>
@@ -87,7 +87,7 @@
         A pessoa foi embora <br>
         Abriu outro aplicativo <br>
         O mundo ficou cativo <br>
-        Da tecnologia do agora <br>.
+        Da tecnologia do agora. <br>
     </p>
     
     <p>
